--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^3.2.4",
     "body-parse": "^0.1.0",
     "cookie-parser": "~1.4.4",
+    "cor": "^0.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
